// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test getSelection & setSelection > Ends in column 1`] = `
{
  "blocks": [
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 1",
          "type": "text",
        },
      ],
      "id": "paragraph-1",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "content": [
                {
                  "styles": {},
                  "text": "Column Paragraph 0",
                  "type": "text",
                },
              ],
              "id": "column-paragraph-0",
              "props": {
                "backgroundColor": "default",
                "textAlignment": "left",
                "textColor": "default",
              },
              "type": "paragraph",
            },
            {
              "children": [],
              "content": [
                {
                  "styles": {},
                  "text": "Column Paragraph 1",
                  "type": "text",
                },
              ],
              "id": "column-paragraph-1",
              "props": {
                "backgroundColor": "default",
                "textAlignment": "left",
                "textColor": "default",
              },
              "type": "paragraph",
            },
          ],
          "content": undefined,
          "id": "column-0",
          "props": {
            "width": 1,
          },
          "type": "column",
        },
        {
          "children": [
            {
              "children": [],
              "content": [
                {
                  "styles": {},
                  "text": "Column Paragraph 2",
                  "type": "text",
                },
              ],
              "id": "column-paragraph-2",
              "props": {
                "backgroundColor": "default",
                "textAlignment": "left",
                "textColor": "default",
              },
              "type": "paragraph",
            },
            {
              "children": [],
              "content": [
                {
                  "styles": {},
                  "text": "Column Paragraph 3",
                  "type": "text",
                },
              ],
              "id": "column-paragraph-3",
              "props": {
                "backgroundColor": "default",
                "textAlignment": "left",
                "textColor": "default",
              },
              "type": "paragraph",
            },
          ],
          "content": undefined,
          "id": "column-1",
          "props": {
            "width": 1,
          },
          "type": "column",
        },
      ],
      "content": undefined,
      "id": "column-list-0",
      "props": {},
      "type": "columnList",
    },
  ],
  "meta": {
    "location": {
      "anchor": {
        "id": "paragraph-1",
        "offset": 0,
      },
      "head": {
        "id": "column-paragraph-1",
        "offset": 18,
      },
    },
  },
  "range": {
    "anchor": {
      "id": "paragraph-1",
      "offset": 0,
    },
    "head": {
      "id": "column-paragraph-1",
      "offset": 18,
    },
  },
}
`;

exports[`Test getSelection & setSelection > Spans column list 1`] = `
{
  "blocks": [
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 1",
          "type": "text",
        },
      ],
      "id": "paragraph-1",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "content": [
                {
                  "styles": {},
                  "text": "Column Paragraph 0",
                  "type": "text",
                },
              ],
              "id": "column-paragraph-0",
              "props": {
                "backgroundColor": "default",
                "textAlignment": "left",
                "textColor": "default",
              },
              "type": "paragraph",
            },
            {
              "children": [],
              "content": [
                {
                  "styles": {},
                  "text": "Column Paragraph 1",
                  "type": "text",
                },
              ],
              "id": "column-paragraph-1",
              "props": {
                "backgroundColor": "default",
                "textAlignment": "left",
                "textColor": "default",
              },
              "type": "paragraph",
            },
          ],
          "content": undefined,
          "id": "column-0",
          "props": {
            "width": 1,
          },
          "type": "column",
        },
        {
          "children": [
            {
              "children": [],
              "content": [
                {
                  "styles": {},
                  "text": "Column Paragraph 2",
                  "type": "text",
                },
              ],
              "id": "column-paragraph-2",
              "props": {
                "backgroundColor": "default",
                "textAlignment": "left",
                "textColor": "default",
              },
              "type": "paragraph",
            },
            {
              "children": [],
              "content": [
                {
                  "styles": {},
                  "text": "Column Paragraph 3",
                  "type": "text",
                },
              ],
              "id": "column-paragraph-3",
              "props": {
                "backgroundColor": "default",
                "textAlignment": "left",
                "textColor": "default",
              },
              "type": "paragraph",
            },
          ],
          "content": undefined,
          "id": "column-1",
          "props": {
            "width": 1,
          },
          "type": "column",
        },
      ],
      "content": undefined,
      "id": "column-list-0",
      "props": {},
      "type": "columnList",
    },
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 2",
          "type": "text",
        },
      ],
      "id": "paragraph-2",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
  ],
  "meta": {
    "location": {
      "anchor": {
        "id": "paragraph-1",
        "offset": 0,
      },
      "head": {
        "id": "paragraph-2",
        "offset": 11,
      },
    },
  },
  "range": {
    "anchor": {
      "id": "paragraph-1",
      "offset": 0,
    },
    "head": {
      "id": "paragraph-2",
      "offset": 11,
    },
  },
}
`;

exports[`Test getSelection & setSelection > Starts in column 1`] = `
{
  "blocks": [
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Column Paragraph 2",
          "type": "text",
        },
      ],
      "id": "column-paragraph-2",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Column Paragraph 3",
          "type": "text",
        },
      ],
      "id": "column-paragraph-3",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
    {
      "children": [],
      "content": [
        {
          "styles": {},
          "text": "Paragraph 2",
          "type": "text",
        },
      ],
      "id": "paragraph-2",
      "props": {
        "backgroundColor": "default",
        "textAlignment": "left",
        "textColor": "default",
      },
      "type": "paragraph",
    },
  ],
  "meta": {
    "location": {
      "anchor": {
        "id": "column-paragraph-2",
        "offset": 0,
      },
      "head": {
        "id": "paragraph-2",
        "offset": 11,
      },
    },
  },
  "range": {
    "anchor": {
      "id": "column-paragraph-2",
      "offset": 0,
    },
    "head": {
      "id": "paragraph-2",
      "offset": 11,
    },
  },
}
`;
